--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
 		<section id="home">
 			<div class="container">
 				<h2>Introduction to Chinese Porcelain</h2>					
-				<video controls width="auto" height="auto" id="video" style="display:none" >
-					<source src="/video/Jingdezhen_ People of Porcelain.mp4" type="video/mp4">
-			</video>
+				<iframe  style="display:none" controls width="1280px" height="720px" id="video" src="https://www.youtube.com/embed/RpfyzAtSI6U" frameborder="0" allowfullscreen></iframe>
 				<h2 id="text" onclick="playVideo()">Click here to play video</h2>
 				<p>　　China is an ancient civilization, and in its long history, ceramics is one of the symbols of material and spiritual civilization. As far back as the early Neolithic period, more than 10,000 years ago, our ancestors invented pottery making on the Chinese land, making China one of the first countries in the world to make and use pottery.
 
